# test-backend

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: celery_app.py  main.py
app/core/: config.py
app/db/: mappers.py  models.py  seed.py  session.py
app/db/migrations/: env.py
app/db/tests/: conftest.py  test_mappers.py  test_seed.py  test_session.py
app/domain/: enums.py  models.py
app/domain/tests/: test_models.py
app/modules/: conftest.py  test_openapi_docs.py
app/modules/admin/: __init__.py  app.py  document_uploads.py  partner_webhook_actions.py  pipeline_actions.py  queries.py
app/modules/auth/: dependencies.py  passwords.py  repository.py  routes.py  service.py  tokens.py
app/modules/dev/: routes.py
app/modules/documents/: repository.py  routes.py  service.py  storage.py
app/modules/health/: routes.py
app/modules/organizations/: repository.py
app/modules/partner_webhooks/: routes.py  signatures.py
app/modules/processing/: progress.py  result_repository.py  service.py  step_repository.py  tasking.py
app/modules/tests/: test_architecture.py  test_bootstrap_metabase.py  test_docker_compose.py
docs/: Async_Adoption.md  Async_Workers_Scaling.md  Flask_Admin.md  Observability_Stats.md  Public_API_Pagination.md  Recovery_Jobs.md  Technical_Strategy.md
front/: .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
front/src/: App.test.tsx  App.tsx  styles.css
front/src/lib/: api.test.ts  api.ts  constants.ts  (+3 more)
scripts/: bootstrap_metabase.py
(+37 files in other folders)
