[project]
name = "primmo-test-backend"
version = "0.1.0"
description = "Primmo backend technical test"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.3",
    "celery[redis]>=5.4.0",
    "fastapi>=0.115.0",
    "flask>=3.0.3",
    "psycopg[binary]>=3.2.3",
    "PyJWT>=2.10.1",
    "python-multipart>=0.0.20",
    "pydantic-settings>=2.5.2",
    "sqlalchemy>=2.0.35",
    "uvicorn[standard]>=0.30.6",
]

[project.optional-dependencies]
dev = [
    "flower>=2.0.1",
    "httpx>=0.27.2",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
testpaths = ["app"]
pythonpath = ["."]
markers = [
    "integration: tests that exercise PostgreSQL or the full FastAPI app",
]
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]

[tool.coverage.run]
branch = true
source = ["app"]
omit = [
    "app/db/migrations/*",
    "app/**/tests/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
